converted into an extension

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div class="container">
         <img class="logo" src="/img/logo.png" width="50" alt="logo">
         <h4 class="heading">CSS UNITS CALCULATOR</h4>
+        <p class="header-text">Built With ❤️ <strong><a href="https://mhnahib.github.io/" target="_blank"
+                    rel="noopener noreferrer">@M. H. Nahib</a></strong></p>
 
         <div class="calculator">
             <div class="px-class">
@@ -43,8 +45,8 @@
                     <strong>16</strong>
                     pixel.
                 </p>
-                <p class="footer-text">Built With ❤️ <strong><a href="https://mhnahib.github.io/" target="_blank"
-                            rel="noopener noreferrer">@M. H. Nahib</a></strong></p>
+                <!-- <p class="footer-text">Built With ❤️ <strong><a href="https://mhnahib.github.io/" target="_blank"
+                            rel="noopener noreferrer">@M. H. Nahib</a></strong></p> -->
             </div>
         </div>
     </div>
